--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "joi": "^17.4.0",
         "pg": "^8.6.0",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
+        "@babel/plugin-transform-runtime": "^7.14.5",
         "@babel/preset-env": "^7.14.7",
         "babel-jest": "^27.0.6",
         "jest": "^27.0.6",
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "supertest": "^6.1.3"
     }
 }
