--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "",
     "main": "src/server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "NODE_ENV=test npx jest -i",
         "start": "node src/server.js"
     },
     "keywords": [],
