--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "joi": "^17.4.0",
+        "jsonwebtoken": "^8.5.1",
         "pg": "^8.6.0",
         "uuid": "^8.3.2"
     },
